--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div>
-    <a href="ms-word:ofe|u|http://localhost:9000/dav/doc.docx">Open Document in Word</a>
+    <a href="ms-word:ofe|u|http://localhost:9000/dav/token/1234/doc.docx">Open Document in Word</a>
   </div>
 </body>
 </html>
