--- a/client/index.html
+++ b/client/index.html
@@ -3,10 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>WebDav Server</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.js"></script>
 </head>
-<body>
-  <div>
-    <a href="ms-word:ofe|u|http://localhost:9000/dav/token/1234/doc.docx">Open Document in Word</a>
-  </div>
+<body ng-app="app">
+<div>
+  <ul ng-controller="filesController">
+    <li ng-repeat="file in files">
+      <a href ng-click="openFile(file)">{{file}}</a>
+    </li>
+  </ul>
+  <a href="ms-word:ofe|u|http://localhost:9000/dav/token/1234/doc.docx">Open Document in Word</a>
+</div>
+<script src="client.js"></script>
 </body>
 </html>
